# apartment-prices-pl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  continuous-training.yml
deploy/: docker-compose.yml
docs/: architecture.md  model_card.md  runbook.md
docs/diagrams/: architecture.mmd
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: apartment_api.json
monitoring/grafana/provisioning/dashboards/: provider.yml
notebooks/: 01_baseline.ipynb
scripts/: check_retrain.py
serving/: Dockerfile  pyproject.toml
serving/apartment_serving/: __init__.py  main.py  model.py  schemas.py
serving/tests/: test_api.py
training/: champion_reference.json  pyproject.toml  requirements-automl.txt
training/conf/base/: catalog.yml  mlflow.yml  parameters_data_processing.yml  parameters_feature_engineering.yml  parameters_modeling.yml  parameters_optimization.yml
training/src/apartment_prices/: __init__.py  __main__.py  features.py  pipeline_registry.py  settings.py
training/src/apartment_prices/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
training/src/apartment_prices/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
training/src/apartment_prices/pipelines/modeling/: __init__.py  nodes.py  pipeline.py
training/src/apartment_prices/pipelines/optimization/: __init__.py  nodes.py  pipeline.py
training/tests/: test_pipeline_registry.py  test_pipelines.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Field.tsx  api.ts  cities.ts  fields.ts  index.css
