[project]
name = "apartment-prices"
version = "0.1.0"
description = "Predykcja cen mieszkań w Polsce (regresja) — workspace MLOps (Kedro + MLflow + FastAPI)"
requires-python = ">=3.10"
dependencies = []

# uv workspace: korzeń jest "wirtualny" (brak [build-system]), a właściwe pakiety to:
[tool.uv]
# Pin rozwiązywania zależności do snapshotu PyPI — deterministyczny lock + zgodność
# z polityką minimalnego wieku pakietów (safe-chain). Szczegóły: internals/decisions.md (D16).
exclude-newer = "2026-05-25T00:00:00Z"

[tool.uv.workspace]
members = ["training", "serving"]

# Narzędzia developerskie współdzielone w całym workspace.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-cov>=5",
    "pre-commit>=3.8",
    "httpx>=0.27",          # wymagane przez fastapi TestClient
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "T201"]
ignore = ["E501"]           # długość linii pilnuje formatter

[tool.ruff.lint.per-file-ignores]
# Notebooki: print() i importy w dalszych komórkach to normalna praktyka eksploracyjna.
"notebooks/**" = ["T201", "E402", "PLR2004"]
# Testy: literały w asercjach (magic values), leniwe importy i lambdy-mocki są normalne.
"**/tests/**" = ["PLR2004", "PLC0415", "PLW0108"]
# Optimization: leniwe importy mlflow/optuna (C0415) i helper o wielu argumentach (R0913).
"**/pipelines/optimization/nodes.py" = ["PLC0415", "PLR0913"]
# Serving: leniwy import mlflow (ładowany dopiero przy pierwszej predykcji).
"serving/apartment_serving/model.py" = ["PLC0415"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
testpaths = ["training/tests", "serving/tests"]
